--- a/vercel.json
+++ b/vercel.json
@@ -5,15 +5,10 @@
     {
       "src": "vercel/api/*/handler.py",
       "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11"
-      }
+      "config": { "pythonVersion": "3.11" }
     }
   ],
   "routes": [
-    {
-      "src": "/api/([^/]+)/?$",
-      "dest": "/vercel/api/$1/handler.py"
-    }
+    { "src": "/api/([^/]+)/?$", "dest": "/vercel/api/$1/handler.py" }
   ]
 }
