--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,77 @@
 {
   "version": 2,
   "public": false,
+  "github": { "enabled": false },
+  "regions": ["lhr1"],
+
   "builds": [
+    {
+      "src": "vercel/api/brand-sentiment/handler.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11",
+        "includeFiles": [
+          "_app/**",
+          "_helper/**",
+          "vercel/api/brand-sentiment/pipeline.py",
+          "vercel/api/brand-sentiment/requirements.txt"
+        ]
+      }
+    },
     {
       "src": "vercel/api/*/handler.py",
       "use": "@vercel/python",
-      "config": { "pythonVersion": "3.11" }
+      "config": {
+        "pythonVersion": "3.11",
+        "includeFiles": [
+          "_app/**",
+          "_helper/**"
+        ]
+      }
+    },
+    {
+      "src": "vercel/api/generate-copy/facebook/handler.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11",
+        "includeFiles": [
+          "_app/**",
+          "_helper/**",
+          "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx",
+          "vercel/api/generate-copy/resources/image/8ms.png"
+        ]
+      }
+    },
+    {
+      "src": "vercel/api/generate-copy/google/handler.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11",
+        "includeFiles": [
+          "_app/**",
+          "_helper/**",
+          "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx",
+          "vercel/api/generate-copy/resources/image/8ms.png"
+        ]
+      }
+    },
+    {
+      "src": "vercel/api/generate-copy/seo/handler.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11",
+        "includeFiles": [
+          "_app/**",
+          "_helper/**",
+          "vercel/api/generate-copy/resources/template_seo.xlsx",
+          "vercel/api/generate-copy/resources/image/8ms.png"
+        ]
+      }
     }
   ],
+
   "routes": [
-    { "src": "/api/([^/]+)/?$", "dest": "/vercel/api/$1/handler.py" }
+    { "src": "/api/([^/]+)/?$", "dest": "/vercel/api/$1/handler.py" },
+    { "src": "/api/([^/]+)/([^/]+)/?$", "dest": "/vercel/api/$1/$2/handler.py" }
   ]
 }
